# zWork

./: .gitignore  0424plan.md  CHANGELOG.md  CONTRIBUTING.md  LANDING_PAGE_BRIEF.md  PLAN.md  README.md  ROADMAP.md  design.md  issueboard.md  pyproject.toml  run-web.sh  run.sh
.github/ISSUE_TEMPLATE/: auth_settings_issue.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.jules/: sentinel.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: README.md  package-lock.json  package.json
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
artifact-demo/: index.html  package-lock.json  package.json
artifact-demo/src/: App.css  App.tsx  index.css
cloud/: .gitignore  Caddyfile  docker-compose.yml
cloud-src/: .env.example  Caddyfile  docker-compose.yml
cloud-src/api/: Cargo.toml
cloud-src/auth/: Dockerfile  config.ts  entrypoint.sh  index.ts  package.json
cloud/api/: Cargo.toml  Dockerfile
cloud/api/src/: main.rs
diagrams/: architecture.mmd  index.html  overview.mmd
docs/: ARCHITECTURE.md  AUTH.md  BENCHMARKS.md  CLOUD.md  CODEMAP_BACKENDS.md  CODEMAP_DESKTOP.md  DESIGN.md  DEVELOPER_GUIDE.md  HARNESS.md  PRODUCT.md  QUALITY.md  RELEASES.md  RELEASE_CHECKLIST_0.3.18-beta.6.md  RESEARCH_TOOLS.md  ROADMAP.md  TECHNICAL_ROADMAP.md  TELEMETRY_SETUP.md  USE_CASES.md  VISION.md  VOICE_MODE_SPEC.md  WIKI.md
docs/archive/: FUTURE_FEATURES.md  PLAN.md  PM_BACKLOG.md  desktop-agent-prd.md
docs/contributions/: note_academic-literature-query-api.md  note_analytics-summary-dashboard.md  note_api-gateway-axum-server.md  note_better-auth-route-resolution.md  note_design-theme-tokens.md  (+46 more)
scripts/: README.md  add_docstrings.py  build-backend.sh  build-linux-release.sh  build-macos-release.sh  build-macos-universal-release.sh  generate-updater-manifest.py  install.sh  package-release.sh  patch-linux-appimage.sh  preview-ui.sh  release.sh
sidecar/: __init__.py  server.py
telemetry-collector/: README.md  analyze.py  server.py
tests/: conftest.py  test_academic.py  test_chatstore.py  test_compaction.py  test_detect.py  test_detect_mlx.py  test_env_loader.py  test_harness_tier_one.py  test_home.py  test_imports.py  test_mcp.py  test_new_features.py  test_ollama_proxy_url.py  test_permission_tools.py  test_prev1_ollama_model.py  test_projects.py  test_reconnection.py  test_runlog.py  test_runtime.py  test_secret_store.py  test_secretstore.py  test_security.py  test_skills.py  test_stock_tool.py  test_taskstore.py  test_utils.py  test_version.py
zWork-Skills/: README.md
(+74 files in other folders)
