[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sidecar"
version = "0.4.0-alpha.18"
description = "zWork: Your Personal AI Assistant that actually gets work done on your computer."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "zWork" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "keyring>=25",
    "mcp>=1.0",
    "pydantic>=2.9",
    "pypdf>=5.0",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
]

[project.scripts]
sidecar = "sidecar.server:main"
zwork-server = "sidecar.server:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["sidecar*"]

[tool.setuptools.package-data]
"sidecar" = ["py.typed"]
"sidecar.agent" = ["py.typed"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
